@@ -21,6 +21,7 @@ use Apache::Test ();
 use Apache::TestConfig ();
 
 use File::Spec::Functions qw(catfile);
+use File::Find;
 
 sub new {
     my $class = shift;
@@ -79,6 +80,37 @@ EOF
 
 sub executable { $0 }
 
+my $core_dump;
+sub core_dump {
+    my $self = shift;
+    
+    $core_dump = "";
+    
+    if (eval { require Devel::GDB }) {
+        find(\&dump_core_file, 't')
+    }
+    
+    $core_dump || '  [CORE TRACE COMES HERE]';
+}
+
+sub dump_core_file {
+    return unless /^core(\.\d+)?$/;
+    
+    my $core = $_;
+    my $gdb = new Devel::GDB ();
+    my $test_config = Apache::TestConfig->new({thaw=>1});
+    my $httpd = $test_config->{vars}->{httpd};
+    
+    return unless defined $httpd;
+    
+    $core_dump .= join '', 
+           $gdb->get("file $httpd"),
+           $gdb->get('sharedlibrary'),
+           $gdb->get("core $core"),
+           $gdb->get('info threads'),
+           $gdb->get('thread apply all bt');
+}
+
 sub date { scalar gmtime() . " GMT" }
 
 sub template {
@@ -94,7 +126,7 @@ sub template {
 
 3. This is the core dump trace: (if you get a core dump):
 
-  [CORE TRACE COMES HERE]
+@CORE_DUMP@
 
 This report was generated by @EXECUTABLE@ on @DATE@.
 
