@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.15-dev
 
+add automatic core dump backtrace generation in t/REPORT if
+Devel::GDB is installed [Gozer]
+
 add 'testcover' make target for running tests with Devel::Cover
 [Geoffrey Young]
 
